--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -11,69 +11,106 @@
 <div class="tab-content">
   <div class="tab-pane fade in active" id="profile" role="tabpanel">
 
-    <h4 style="margin-top: 30px; margin-bottom: 20px;">Personal Information</h4>
-    <!-- <form class="form-inline"> -->
-      <%= @user.errors.full_messages.join(", ") %>
-      <%= form_for @user do |f| %>
-      <div class="form-margins2">
-        <%= f.text_field :first_name, placeholder: "First name", class: "login-input-field login-input-form" %>
+    <!-- <div class="table-responsive">
+      <div class="grid" cellspacing="0">
+        <tbody>
+          <tr>
+            <td colspan="6">
+              span6
+            </td>
+            <td colspan="6">
+              span6
+            </td>
+          </tr>
+        </tbody>
       </div>
-      <div class="form-margins2">
-        <%= f.text_field :last_name, placeholder: "Last name", class: "login-input-field login-input-form" %>
-      </div>
-      <div class="form-margins2">
-        <%= f.email_field :email, placeholder: "Email", class: "login-input-field login-input-form" %>
-      </div>
-      <div class="form-margins2">
-        <%= f.password_field :password, placeholder: "Password",class: "login-input-field login-input-form" %>
-      </div>
-    <!-- </form> -->
-    <div class="form-margins1">
-      <%= f.text_field :telephone, placeholder: "Telephone", class: "login-input-field login-input-form" %>
-    </div>
-    <div style="margin-bottom: 40px;" class="form-group form-margins1" >
+    </div> -->
+
+  <%= @user.errors.full_messages.join(", ") %>
+  <%= form_for @user do |f| %>
+  <table class="table table-responsive">
+    <tbody>
+      <h4 style="margin-top: 30px; margin-bottom: 20px;">Personal Information</h4>
+      <tr>
+        <td colspan="6">
+          <div>
+            <%= f.text_field :first_name, placeholder: "First name", class: "login-input-field login-input-form" %>
+          </div>
+        </td>
+        <td colspan="6">
+          <div>
+            <%= f.text_field :last_name, placeholder: "Last name", class: "login-input-field login-input-form" %>
+          </div>
+        </td>
+      </tr>
+      <tr>
+        <td colspan="6">
+          <div>
+            <%= f.email_field :email, placeholder: "Email", class: "login-input-field login-input-form" %>
+          </div>
+        </td>
+        <td colspan="6">
+          <div>
+            <%= f.password_field :password, placeholder: "Password",class: "login-input-field login-input-form" %>
+          </div>
+        </td>
+      </tr>
+      <tr>
+        <td colspan="12">
+          <div>
+            <%= f.text_field :telephone, placeholder: "Telephone", class: "login-input-field login-input-form" %>
+          </div>
+        </td>
+      </tr>
+      <tr>
+        <td colspan="2">Larry the Bird</td>
+        <td>@twitter</td>
+      </tr>
+    </tbody>
+  </table>
+
+
+
+
+
+    <div style="margin-bottom: 40px;">
       <%= f.label :avatar %>
       <%= f.file_field :avatar %>
     </div>
 
     <h4 style="margin-top: 30px; margin-bottom: 20px;">Address</h4>
-    <!-- <form class="form-inline"> -->
-      <div class="form-margins3">
+      <div>
         <%= f.text_field :apartment_number, placeholder: "Apartment number", class: "login-input-field login-input-form" %>
       </div>
-      <div class="form-margins3">
+      <div>
         <%= f.text_field :street_number, placeholder: "Street number",class: "login-input-field login-input-form" %>
       </div>
-      <div class="form-margins3">
+      <div>
         <%= f.text_field :street, placeholder: "Street", class: "login-input-field login-input-form" %>
       </div>
-    <!-- </form> -->
 
-    <!-- <form class="form-inline"> -->
-      <div class="form-margins3">
+      <div>
         <%= f.text_field :city, placeholder: "City", class: "login-input-field login-input-form" %>
       </div>
-      <div class="form-margins3">
+      <div>
         <%= f.text_field :state, placeholder: "State", class: "login-input-field login-input-form" %>
       </div>
-      <div class="form-margins3">
+      <div>
         <%= f.text_field :country, placeholder: "Country", class: "login-input-field login-input-form" %>
       </div>
-    <!-- </form> -->
 
     <h4 style="margin-top: 30px; margin-bottom: 20px;">Shop Information</h4>
 
-    <div class="form-margins1">
+    <div>
       <%= f.text_field :shop_name, placeholder: "Shop name", class: "login-input-field login-input-form" %>
     </div>
-    <div class="form-margins1">
+    <div>
       <%= f.text_field :description, placeholder: "Description", class: "login-input-field login-input-form" %>
     </div>
-    <div style="margin: 10px;">
+    <div>
       <%= f.submit "Edit account", class: "buy-btn" %>
     </div>
     <% end %>
-  <!-- </form> -->
   </div>
 
   <div class="tab-pane fade in" id="add_menu_item" role="tabpanel">
