--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -32,7 +32,7 @@
     <tbody>
       <h4 style="margin-top: 30px; margin-bottom: 20px;">Personal Information</h4>
       <tr>
-        <td colspan="6">
+        <td colspan="6" style="border-top: 0px">
           <div>
             <%= f.text_field :first_name, placeholder: "First name", class: "login-input-field login-input-form" %>
           </div>
