--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -122,7 +122,7 @@
         <tr>
           <td>
             <div colspan="12" style="border-top: 0px; padding: 2px;">
-              <%= f.submit "Edit account", class: "buy-btn" %>
+              <%= f.submit "Edit account", class: "btn-primary buy-btn" %>
             </div>
           </td>
         </tr>
