--- a/app/views/users/_add_menu_items.html.erb
+++ b/app/views/users/_add_menu_items.html.erb
@@ -1,3 +1,6 @@
+<div class="container">
+
+
 <%= form_for [@user, @menu_items], remote: true, authenticity_token: true do |menu| %>
 
 <table class="table table-responsive" style="border: 0px;">
@@ -39,6 +42,5 @@
     </td>
   </tr>
 </table>
-
-
 <% end %>
+</div>
