--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -76,13 +76,10 @@
 <div class="footer">
         <div class="container">
           <div class="navbar-header">
-            <a class="navbar-brand" href="#" style="padding: 25px 0px;"><%= image_tag "neighborfood-logo.png", class: "logo"%></a>
+            <a class="navbar-brand" href="#"><%= image_tag "neighborfood-logo.png", class: "logo"%></a>
           </div>
             <div id="copyright">
               <p>© 2016 neighborFood</p>
-              <!-- <ul class="nav navbar-nav navbar-right">
-                <li style="color: #fff; margin: 25px 15px;">© 2016 Awesome Answers</li>
-              </ul>-->
             </div>
 
         </div>
