temporary fix for links

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,8 +23,10 @@
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav nav-pills">
           <li><%= link_to "Home Cooks", users_path %></li>
-          <li><%= link_to "About", about_path %></li>
-          <li><%= link_to "Contact", new_contact_path %></li>
+          <li><%= link_to "About", root_path %></li>
+          <!-- about_path -->
+          <li><%= link_to "Contact", root_path %></li>
+          <!-- new_contact_path -->
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <!-- <li><%#= link_to fa_icon('shopping-cart lg'), root_path %></li> -->
