--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -137,7 +137,7 @@
         <%= render "add_menu_items"%>
       </div>
 
-      <div class="container">
+      <div class="container" style="margin-top: 20px;">
       <div class="row" style="background-color:#FAF9F0; border-radius: 3px;">
         <div id="menu_items">
           <div class="container">
