made home page banner static

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -129,6 +129,7 @@
 
 #header-pic {
   background-image: image-url('cupcakes2.jpg');
+  background-attachment: fixed;
   background-size: cover;
   height: 770px;
 }
